# Advent-of-Code

./: .gitignore  Manifest.toml  Project.toml  day11.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day2.jl  day21.jl  day23.jl  day24.jl  day25.jl  day3.jl  day4.jl  day5.jl  day6.jl  day7.jl  day8.jl  day9.jl  q1-1.cpp
2022/: Day 1 Calorie Counting.jl  Day 2 Rock Paper Scissors.jl  Day 3 Rucksack Reorganization.jl  Day 4 Camp Cleanup.jl
2023/: Manifest.toml  Project.toml  day1.jl  day10.jl  day12.jl  day13.jl  day15.jl  day17.jl  day18.jl  day21.jl  day22.jl  day23.jl  day24.jl  day3.jl  day4.jl  day7.jl  day8.jl  day9.jl
2025/: q1_joint  q1_joint.zig  q1_p1  q1_p1.zig  q1_p2.zig  q2  q2.zig  q2_p1_fast  q2_p1_fast.zig  q3  q3.zig  q4.zig  q5.zig  q5_soa  q5_soa.zig
2025/q10/: Cargo.toml
2025/q10/src/: main.rs  main_custom_powerset.rs  main_faster_reddit.rs  main_less_allocs.rs  main_no_clone.rs  main_reddit_modified.rs  main_using_powerset.rs
2025/q11/: Cargo.toml
2025/q11/src/: main.rs
2025/q6/: Cargo.toml
2025/q6/src/: main.rs
2025/q7/: Cargo.toml
2025/q7/src/: main.rs
2025/q8/: Cargo.toml
2025/q8/src/: main.rs  p1.rs
2025/q9/: Cargo.toml
2025/q9/src/: main.rs
